# profile_log_visualizer

./: .bowerrc  .mailmap  CMakeLists.txt  README.md  analyser-cli  bower.json  gulpfile.js  package.json  visualizer-gui
app/: aggregate.js  analyser.js  cli.js  humanize.js  index.html  polyfills.js  section.js  stats.js  style.css  tooltips.js  treeDirective.js  ui.js  unflatten.js
app/css/: main.css
less/: main.less
less/includes/: loading.less  side-pane.less  tree.less
